# churn_telecomunicaciones

./: README.md  main.py  pyproject.toml
data/processed/: teleco-ML.csv  teleco-clean.csv
models/: Modelos.ipynb  RegressionnLogistica.ipynb
notebooks/: Eda.ipynb  feature_engenieer.ipynb
src/utils/: ClaseAbdon.py
